--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "react-pose": "^4.0.5",
+    "react-scroll": "^1.7.14",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
