--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.3.26",
     "gatsby-image": "^2.0.39",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-offline": "^2.0.25",
+    "gatsby-plugin-postcss": "^2.1.11",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-react-svg": "^2.0.0",
     "gatsby-plugin-sharp": "^2.0.35",
@@ -63,6 +65,7 @@
     "lighthouse": "^4.0.0",
     "mkdirp": "^0.5.1",
     "node-gyp": "^3.8.0",
-    "prettier": "^1.16.0"
+    "prettier": "^1.16.0",
+    "tailwindcss": "^1.1.2"
   }
 }
